--- a/RN_v1_9_3.md
+++ b/RN_v1_9_3.md
@@ -1,4 +1,7 @@
-# TRUST release note - version 1.9.3
+---
+title: TRUST Release Note - V1.9.3
+layout: page
+---
 
 This page details the major changes and new functionalities released with TRUST version 1.9.3!
 The main points are the introduction of the new PolyMAC spatial discretisations, the updates concerning the porting to the GPU architectures, and the changes around the MED and LATA formats.
