--- a/RN/v1_9_4.md
+++ b/RN/v1_9_4.md
@@ -1,1 +1,6 @@
+---
+title: TRUST Release Note - V1.9.4
+layout: page
+---
 
+This page details the major changes and new functionalities released with TRUST version 1.9.4!
